--- a/index.html
+++ b/index.html
@@ -1,23 +1,51 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf-8">
-<title>Hello OpenCV.js</title>
+  <meta charset="utf-8">
+  <title>Hello OpenCV.js</title>
+
+  <script type="text/javascript">
+    let video = document.getElementById("videoInput"); // video is the id of video tag
+    navigator.mediaDevices.getUserMedia({ video: true, audio: false })
+      .then(function (stream) {
+        video.srcObject = stream;
+        video.play();
+      })
+      .catch(function (err) {
+        console.log("An error occurred! " + err);
+      });
+
+    let canvasFrame = document.getElementById("canvasFrame"); // canvasFrame is the id of <canvas>
+    let context = canvasFrame.getContext("2d");
+    let src = new cv.Mat(height, width, cv.CV_8UC4);
+    let dst = new cv.Mat(height, width, cv.CV_8UC1);
+
+    const FPS = 30;
+    function processVideo() {
+      let begin = Date.now();
+      context.drawImage(video, 0, 0, width, height);
+      src.data.set(context.getImageData(0, 0, width, height).data);
+      cv.cvtColor(src, dst, cv.COLOR_RGBA2GRAY);
+      cv.imshow("canvasOutput", dst); // canvasOutput is the id of another <canvas>;
+      // schedule next one.
+      let delay = 1000 / FPS - (Date.now() - begin);
+      setTimeout(processVideo, delay);
+    }
+
+    // schedule first one.
+    setTimeout(processVideo, 0);
+  </script>
+  <script async src="opencv.js" type="text/javascript"></script>
+
 </head>
+
 <body>
-<h2>Hello OpenCV.js</h2>
-<div>
-  <div class="inputoutput">
-    <img id="imageSrc" alt="No Image" />
-    <div class="caption">imageSrc <input type="file" id="fileInput" name="file" /></div>
-  </div>
-</div>
-<script type="text/javascript">
-let imgElement = document.getElementById("imageSrc")
-let inputElement = document.getElementById("fileInput");
-inputElement.addEventListener("change", (e) => {
-  imgElement.src = URL.createObjectURL(e.target.files[0]);
-}, false);
-</script>
+
+  <video></video>
+  <canvas id="canvasFrame"></canvas>
+  <canvas id="canvasOutput"></canvas>
+
 </body>
+
 </html>
