--- a/index.html
+++ b/index.html
@@ -3,19 +3,26 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Hello OpenCV.js</title>
+  <title>Dreamscape
 
-  <script src="script.js" type="text/javascript"> </script>
-  <script async src="opencv.js" type="text/javascript"></script>
-
+  </title>
 </head>
 
 <body>
-
+  <h2>Welcome to Dreamscape</h2>
+  <p id="status">OpenCV.js is loading...</p>
   <video id="videoInput"></video>
-  <canvas id="canvasFrame"></canvas>
-  <canvas id="canvasOutput"></canvas>
 
+  <div class="inputoutput">
+    <canvas id="canvasFrame"></canvas>
+
+    <canvas id="canvasOutput"></canvas>
+    <div class="caption">canvasOutput</div>
+  </div>
+  <script src="script.js" type="text/javascript">
+
+  </script>
+  <script async src="opencv.js" type="text/javascript"></script>
 </body>
 
 </html>
