Added button for black + white, doesn't connect to anything yet (mostly for testing discord webhook)

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
     <canvas id="canvasOutput"></canvas>
     <div class="caption">canvasOutput</div>
   </div>
-  <script src="script.js" type="text/javascript">
+  <div class="dom">
+    <button>Black and White</button>
 
-  </script>
+  </div>
+  <script src="script.js" type="text/javascript"></script>
   <script async src="opencv.js" type="text/javascript"></script>
 </body>
 
